--- a/PosOnLine/Src/Reportes/VueltosEntregado.rdlc
+++ b/PosOnLine/Src/Reportes/VueltosEntregado.rdlc
@@ -399,7 +399,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>CANT</Value>
+                              <Value>CANT ($)</Value>
                               <Style>
                                 <FontSize>7pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
